--- a/src/js/views/incidents.html
+++ b/src/js/views/incidents.html
@@ -25,7 +25,7 @@
              <template slot="seriesTemplate" data-oj-as="series">
                  <oj-timeline-series
                          label="[[series.id]]"
-                         empty-text="No Data."
+                         empty-text="No Meetings."
                 >
                  </oj-timeline-series>
              </template>
